2006-06-26  Mark Wielaard  <mark@klomp.org>

	* frysk-sys/frysk/sys/TestPtraceByteBuffer.java: New test.
	* frysk-sys/frysk/sys/TestLib.java (intVal, byteVal, longVal):
	New static fields.
	(getIntValAddr, getByteValAddr, getLongValAddr): New native methods.
	(getFuncAddr): Likewise.
	(getFuncBytes): Likewise.
	* frysk-sys/frysk/sys/cni/TestLib.cxx
	(dummyfunc): New static function.
	(getIntValAddr, getByteValAddr, getLongValAddr): New method.
	(getFuncAddr): Likewise.
	(getFuncBytes): Likewise.

	* frysk-sys/frysk/sys/cni/PtraceByteBuffer.cxx (peek): Use off when
	storing bytes.

2006-06-19  Mike Cvet  <mcvet@redhat.com>

	* TestCallPtrace.java (testChildContinue): Finalized tests
	(getPt): Set the ptrace thread to a daemon thread so that Frysk exits
	properly.

2006-06-16  Mike Cvet  <mcvet@redhat.com>

	* PtraceByteBuffer.java: Moved over to frysk/sys.
	* PtraceByteBuffer.cxx: Moved over to frysk/sys/cni; fixes to use the new
	ptrace thread implementation - fixes #2783.
	* funit-threadexit.c: Removed race condition.
	* TestTaskTerminatedObserver.java: TestTerm now stops when the task dies
	as opposed to timing out.
	* TestLib.Java: Added print statement if event loop is not stopped.
	* Ptrace.java: Added methods for peek() and poke().
	* Ptrace.cxx: Added methods for peek() and poke().
	* Makefile.am: Builds with headers from inua.

2006-06-15  Nurdin Premji  <npremji@redhat.com>

	* cni/Poll.cxx: Add #include <linux.syscall> and <unistd.h>
	* cni/Signal.cxx: Ditto.
	* cni/Tid.cxx: Ditto.
	
2006-06-15  Sami Wagiaalla  <swagiaal@redhat.com>

	* cni/Wait.cxx: Fixed a bug resluting in the errno being
	overwritten before being reported

2006-06-15  Mike Cvet  <mcvet@redhat.com>

	* Ptrace.java: Re-written to now perform all ptrace requests on a
	separate thread, to address #2595. The parent thread is always running
	and any children created or attaches to other processes are performed
	transparently on the ptrace thread which will continue to run after the 